--- a/style.css
+++ b/style.css
@@ -1,105 +1,76 @@
 body{
-  font-family: 'Open Sans', arial, sans-serif;
-  background:rgb(123, 158, 158);
+	font-family: 'Open Sans', arial, sans-serif;
+	background:rgb(123, 158, 158);
 
 }
 *{
-  margin:0;
-  padding:0;
+	margin:0;
+	padding:0;
 }
 #categories{
-  overflow:hidden;
-  width:95%;
-  margin:0 auto;
+	overflow:hidden;
+	width:96%;
+	margin:0 auto;
 }
 .clr:after{
-  content:"";
-  display:block;
-  clear:both;
+	content:"";
+	display:block;
+	clear:both;
 }
 #categories li{
-  position:relative;
-  list-style-type:none;
-  width:27.85714285714286%; /* = (100-2.5) / 3.5 */
-  padding-bottom: 32.16760145166612%; /* =  width /0.866 */
-  float:left;
-  overflow:hidden;
-  visibility:hidden;
- 
-  -webkit-transform: rotate(-60deg) skewY(30deg);
-  -ms-transform: rotate(-60deg) skewY(30deg);
-  transform: rotate(-60deg) skewY(30deg);
-}
-#categories li:nth-child(3n+2){
-  margin:0 1%;
-}
-#categories li:nth-child(6n+4){
-  margin-left:0.5%;
-}
-#categories li:nth-child(6n+4), #categories li:nth-child(6n+5), #categories li:nth-child(6n+6) {
-	margin-top: -6.9285714285%;
-  margin-bottom: -6.9285714285%;
-  
-  -webkit-transform: translateX(50%) rotate(-60deg) skewY(30deg);
-  -ms-transform: translateX(50%) rotate(-60deg) skewY(30deg);
-  transform: translateX(50%) rotate(-60deg) skewY(30deg);
-}
-#categories li:nth-child(6n+4):last-child, #categories li:nth-child(6n+5):last-child, #categories li:nth-child(6n+6):last-child{
-  margin-bottom:0%;
+	position:relative;
+	list-style-type:none;
+	float:left;
+	overflow:hidden;
+	visibility:hidden;
+	transform: rotate(-60deg) skewY(30deg);
 }
 #categories li *{
-  position:absolute;
-  visibility:visible;
+	position:absolute;
+	visibility:visible;
 }
 #categories li > div{
-  width:100%;
-  height:100%;
-  text-align:center;
-  color:#fff;
-  overflow:hidden;
-  
-  -webkit-transform: skewY(-30deg) rotate(60deg);
-  -ms-transform: skewY(-30deg) rotate(60deg);
-  transform: skewY(-30deg) rotate(60deg);
-  
-	-webkit-backface-visibility:hidden;
-  
+	width:100%;
+	height:100%;
+	text-align:center;
+	color:#fff;
+	overflow:hidden;
+	transform: skewY(-30deg) rotate(60deg);  
+	backface-visibility:hidden;
+	
 }
 
 /* HEX CONTENT */
 #categories li img{
-  left:-100%; right:-100%;
-  width: auto; height:100%;
-  margin:0 auto;   
+	left:-100%; right:-100%;
+	width: auto; height:100%;
+	margin:0 auto;   
 }
 
 #categories div h1, #categories div p{
-  width:90%;
-  padding:0 5%;
-  background-color:#008080; background-color: rgba(0, 128, 128, 0.8);
-  font-family: 'Raleway', sans-serif;
-  
-  -webkit-transition: top .2s ease-out, bottom .2s ease-out, .2s padding .2s ease-out;
-  -ms-transition: top .2s ease-out, bottom .2s ease-out, .2s padding .2s ease-out;
-  transition: top .2s ease-out, bottom .2s ease-out, .2s padding .2s ease-out;
+	width:90%;
+	padding:0 5%;
+	background-color:#008080; background-color: rgba(0, 128, 128, 0.8);
+	font-family: 'Raleway', sans-serif;
+	transition: top .2s ease-out, bottom .2s ease-out, .2s padding .2s ease-out;
 }
 #categories li h1{
-  bottom:110%;
-  font-style:italic;
-  font-weight:normal;
-  font-size:1.5em;
-  padding-top:100%;
-  padding-bottom:100%;
+	bottom:110%;
+	font-style:italic;
+	font-weight:normal;
+	font-size:1.5em;
+	padding-top:100%;
+	padding-bottom:100%;
 }
 #categories li h1:after{
 	content:'';
-  display:block;
-  position:absolute;
-  bottom:-1px; left:45%;
-  width:10%;
-  text-align:center;
-  z-index:1;
-  border-bottom:2px solid #fff;
+	display:block;
+	position:absolute;
+	bottom:-1px; left:45%;
+	width:10%;
+	text-align:center;
+	z-index:1;
+	border-bottom:2px solid #fff;
 }
 #categories li p{
 	padding-top:50%;
@@ -111,11 +82,103 @@ body{
 /* HOVER EFFECT  */
 
 #categories li div:hover h1 {
-  bottom:50%;
-  padding-bottom:10%;
+	bottom:50%;
+	padding-bottom:10%;
 }
 
 #categories li div:hover p{
-  top:50%;
-  padding-top:10%;
+	top:50%;
+	padding-top:10%;
+}
+@media (min-width:1201px) {
+	#categories li{
+		width:17.364%; /* = (100-4.5) / 5.5 */
+		padding-bottom: 20.05%; /* =  width /0.866 */
+	}
+	#categories li:nth-child(10n+6), #categories li:nth-child(10n+7), #categories li:nth-child(10n+8), #categories li:nth-child(10n+9), #categories li:nth-child(10n+10) {
+		margin-top: -4.2%;
+		margin-bottom: -4.2%;
+		transform: translateX(50%) rotate(-60deg) skewY(30deg);
+	}
+	#categories li:nth-child(10n+6):last-child, #categories li:nth-child(10n+7):last-child, #categories li:nth-child(10n+8):last-child, #categories li:nth-child(10n+9):last-child, #categories li:nth-child(10n+10):last-child{
+		margin-bottom:0;
+	}
+	#categories li:nth-child(10n+6){
+		margin-left:0.5%;
+	}
+	#categories li:nth-child(5n+2) {
+		margin-left:1%;
+		margin-right:1%;
+	}
+	#categories li:nth-child(5n+3),#categories li:nth-child(5n+4){
+		margin-right:1%;
+	}
+}
+
+
+@media (max-width: 1200px) and (min-width:901px) {
+	#categories li{
+		width:21.444%; /* = (100-3.5) / 4.5 */
+		padding-bottom: 24.763%; /* =  width /0.866 */
+	}
+	#categories li:nth-child(8n+5), #categories li:nth-child(8n+6), #categories li:nth-child(8n+7), #categories li:nth-child(8n+8) {
+		margin-top: -5.298%;
+		margin-bottom: -5.298%;
+		transform: translateX(50%) rotate(-60deg) skewY(30deg);
+	}
+	#categories li:nth-child(8n+5):last-child, #categories li:nth-child(8n+6):last-child, #categories li:nth-child(8n+7):last-child, #categories li:nth-child(8n+8):last-child{
+		margin-bottom:0;
+	}
+	#categories li:nth-child(8n+5){
+		margin-left:0.5%;
+	}
+	#categories li:nth-child(4n+2) {
+		margin-left:1%;
+		margin-right:1%;
+	}
+	#categories li:nth-child(4n+3){
+		margin-right:1%;
+	}
+}
+
+@media (max-width: 900px) and (min-width:601px) {
+	#categories li{
+		width:27.857%; /* = (100-2.5) / 3.5 */
+		padding-bottom: 32.168%; /* =  width /0.866 */
+	}
+	#categories li:nth-child(6n+4), #categories li:nth-child(6n+5), #categories li:nth-child(6n+6) {
+		margin-top: -7.322%;
+		margin-bottom: -7.322%;
+		transform: translateX(50%) rotate(-60deg) skewY(30deg);
+	}
+	#categories li:nth-child(6n+4):last-child, #categories li:nth-child(6n+5):last-child, #categories li:nth-child(6n+6):last-child{
+		margin-bottom:0;
+	}
+	#categories li:nth-child(6n+4){
+		margin-left:0.5%;
+	}
+	#categories li:nth-child(3n+2) {
+		margin-left:1%;
+		margin-right:1%;
+	}
+}
+@media (max-width: 600px) {
+	#categories li{
+		width:39.4%; /* = (100-1.5) / 2.5 */
+		padding-bottom: 45.496%; /* =  width /0.866 */
+	}
+	#categories li:nth-child(4n+3), #categories li:nth-child(4n+4){
+		margin-top: -10.392%;
+		margin-bottom: -10.392%;
+		transform: translateX(50%) rotate(-60deg) skewY(30deg);
+	}
+	#categories li:nth-child(4n+3):last-child, #categories li:nth-child(4n+4):last-child{
+		margin-bottom:0;
+	}
+	#categories li:nth-child(4n+3){
+		margin-left:0.5%;
+	}
+	#categories li:nth-child(2n+2) {
+		margin-left:1%;
+	}
 }
