--- a/new/style.css
+++ b/new/style.css
@@ -18,7 +18,8 @@ body{
 	margin:0 auto;
 	display: block;
 }
-.hex-grid li{
+.hex-grid li,.hex-grid div{
+	display: block;
 	position:relative;
 	list-style-type:none;
 	float:left;
@@ -34,11 +35,12 @@ body{
 	visibility:visible;
 }
 .hex-grid li  a {
+	display: block;
 	text-align: center;
-	right: 0; left: 0;
-	width: auto;
+	width: 100%;
 	height: 100%;
 	color: inherit;
+	z-index: 1;
 }
 .hex-grid li > div{
 	position: absolute;
@@ -54,20 +56,55 @@ body{
 	right: -100%; left: -100%;
 	height: 100%;
 	width: auto;
+	max-width: none;
 	margin:0 auto;   
 }
-.hex-grid li h1,p {
+.hex-grid li h1, .hex-grid li p {
+	text-align: center;
 	width: 90%;
-	padding:0 5%;
+	margin:0 5%;
 	font-family: 'Raleway', sans-serif;
+	z-index: -1;
 }
 .hex-grid li h1 {
-	top: 10%;
+	height: 40%;
+	bottom: 50%;
 	font-size:1.5em;
 }
 .hex-grid li p {
-	bottom: 10%;
+	height: 40%;
+	top: 50%;
 }
-.hex-grid .hex-row-start {
-	transform: translateX(50%) rotate(-60deg) skewY(30deg);
+.hex-grid div:hover h1, .hex-grid div:hover p {
+	z-index: 1;
+}
+.hidden {
+	display: none !important;
+}
+
+
+@media (min-width:1201px) {
+	.hex-grid li {
+		width:15.3846153846153846%; /* = (100%-H-margin) / (#columns + .5) */
+		padding-bottom:17.7651447859300053%; /* =  width /0.866 */
+	}
+	.hex-grid li:nth-of-type(n+7) {
+		margin: -4.444% auto 0 auto;
+	}
+	.hex-grid li:nth-of-type(12n+7) {
+		margin: -4.444% auto 0 7.6923076923076923076923076923077%;
+	}
+	
+}
+@media (max-width:1200px) and (min-width: 901px) {
+	.hex-grid li {
+		width:18.18181818181818181818%; /* = (100%-H-margin) / (#columns + .5) */
+		padding-bottom:20.99517111064455%; /* =  width /0.866 */
+	}
+	.hex-grid li:nth-of-type(n+6) {
+		margin: -5.3% auto 0 auto;
+	}
+	.hex-grid li:nth-of-type(10n+6) {
+		margin: -5.3% auto 0 9.0909090909090909090909090909091%;
+	}
 }
