--- a/new/style.css
+++ b/new/style.css
@@ -8,7 +8,8 @@ body{
 }
 #nav {
 	display: flex;
-	flex-flow: row no-wrap;
+	flex-direction:row;
+	flex-wrap:no-wrap;
 	align-items:flex-end;
 }
 .switchbox {
@@ -34,9 +35,15 @@ body{
 	overflow:hidden;
 	visibility:hidden;
 	transform: rotate(-60deg) skewY(30deg);
-	
-	width:16%; /* = (100%-H-margin) / (#columns + .5) */
-	padding-bottom: 18.461538461538461538461538461538%; /* =  width /0.866 */
+	width:calc(100%/4.5 - 4*1.732*1%/4.5); /* = (100%-H-margin) / (#columns + .5) */
+	padding-bottom:calc(100%/4.5/0.866 - 4*2*1%/4.5); /* =  width /0.866 */
+	margin: 0 0.5% 0 0.5%;
+}
+.hex-grid li:nth-of-type(n+5) {
+	margin: calc(-100%/4.5/3.4641 + 4*1%/4.5/2 + 1%) .5% 0 .5%;
+}
+.hex-grid li:nth-of-type(8n+5) {
+	margin: calc(-100%/4.5/3.4641 + 4*1%/4.5/2 + 1%) .5% 0 calc(100%/4.5/2 - 4*1.732*1%/4.5/2 + 1%);
 }
 .hex-grid li *{
 	position:absolute;
@@ -93,38 +100,77 @@ body{
 
 @media (min-width:1201px) {
 	.hex-grid li {
-		width:15.3846153846153846%; /* = (100%-H-margin) / (#columns + .5) */
-		padding-bottom:17.7651447859300053%; /* =  width /0.866 */
+		width:calc(100%/6.5 - 6*1.732*1%/6.5) !important; /* = (100%-H-margin) / (#columns + .5) */
+		padding-bottom:calc(100%/6.5/0.866 - 6*2*1%/6.5) !important; /* =  width /0.866 */
+		margin: 0 0.5% 0 0.5% !important;
 	}
 	.hex-grid li:nth-of-type(n+7) {
-		margin: -4.444% auto 0 auto;
+		margin: calc(-100%/6.5/3.4641 + 6*1%/6.5/2 + 1%) 0.5% 0 0.5% !important;
 	}
 	.hex-grid li:nth-of-type(12n+7) {
-		margin: -4.444% auto 0 7.6923076923076923076923076923077%;
+		margin: calc(-100%/6.5/3.4641 + 6*1%/6.5/2 + 1%) 0.5% 0 calc(100%/6.5/2 - 6*1.732*1%/6.5/2 + 1%) !important;
 	}
 	
 }
-@media (max-width:1200px) and (min-width: 1001px) {
+@media (min-width:1001px) and (max-width: 1200px) {
 	.hex-grid li {
-		width:18.18181818181818181818%; /* = (100%-H-margin) / (#columns + .5) */
-		padding-bottom:20.99517111064455%; /* =  width /0.866 */
+		width:calc(100%/5.5 - 5*1.732*1%/5.5) !important; /* = (100%-H-margin) / (#columns + .5) */
+		padding-bottom:calc(100%/5.5/0.866 - 5*2*1%/5.5) !important; /* =  width /0.866 */
+		margin: 0 .5% 0 .5% !important;
 	}
 	.hex-grid li:nth-of-type(n+6) {
-		margin: -5.3% auto 0 auto;
+		margin: calc(-100%/5.5/3.4641 + 5*1%/5.5/2 + 1%) .5% 0 .5% !important;
 	}
 	.hex-grid li:nth-of-type(10n+6) {
-		margin: -5.3% auto 0 9.0909090909090909090909090909091%;
+		margin: calc(-100%/5.5/3.4641 + 5*1%/5.5/2 + 1%) .5% 0 calc(100%/5.5/2 - 5*1.732*1%/5.5/2 + 1%) !important;
 	}
+	
 }
-@media (max-width:1000px) and (min-width: 801px) {
+@media (min-width:451px) and (max-width: 800px) {
 	.hex-grid li {
-		width:18.18181818181818181818%; /* = (100%-H-margin) / (#columns + .5) */
-		padding-bottom:20.99517111064455%; /* =  width /0.866 */
+		width:calc(100%/3.5 - 3*1.732*1%/3.5) !important; /* = (100%-H-margin) / (#columns + .5) */
+		padding-bottom:calc(100%/3.5/0.866 - 3*2*1%/3.5) !important; /* =  width /0.866 */
+		margin: 0 .5% 0 .5% !important;
 	}
-	.hex-grid li:nth-of-type(n+6) {
-		margin: -5.3% auto 0 auto;
+	.hex-grid li:nth-of-type(n+4) {
+		margin: calc(-100%/3.5/3.4641 + 3*1%/3.5/2 + 1%) .5% 0 .5% !important;
 	}
-	.hex-grid li:nth-of-type(10n+6) {
-		margin: -5.3% auto 0 9.0909090909090909090909090909091%;
+	.hex-grid li:nth-of-type(6n+4) {
+		margin: calc(-100%/3.5/3.4641 + 3*1%/3.5/2 + 1%) .5% 0 calc(100%/3.5/2 - 3*1.732*1%/3.5/2 + 1%) !important;
 	}
+	#nav {
+		justify-content:space-around;
+
+	}
+	.switchbox {
+		margin: none;
+	}
+
+	
+}
+@media (max-width: 450px) {
+	.hex-grid li {
+		width:calc(100%/3.5 - 3*1.732*1%/3.5) !important; /* = (100%-H-margin) / (#columns + .5) */
+		padding-bottom:calc(100%/3.5/0.866 - 3*2*1%/3.5) !important; /* =  width /0.866 */
+		margin: 0 .5% 0 .5% !important;
+	}
+	.hex-grid li:nth-of-type(n+4) {
+		margin: calc(-100%/3.5/3.4641 + 3*1%/3.5/2 + 1%) .5% 0 .5% !important;
+	}
+	.hex-grid li:nth-of-type(6n+4) {
+		margin: calc(-100%/3.5/3.4641 + 3*1%/3.5/2 + 1%) .5% 0 calc(100%/3.5/2 - 3*1.732*1%/3.5/2 + 1%) !important;
+	}
+	#nav {
+		flex-direction: column;
+		align-items: flex-start;
+	}
+	.switchbox {
+		margin: none;
+		flex-direction: row;
+	}
+	.switchbox .switch {
+		order: -1;
+		margin-right: 1em;
+	}
+	
 }
