--- a/new/style.css
+++ b/new/style.css
@@ -9,8 +9,13 @@ body{
 #nav {
 	display: flex;
 	flex-direction:row;
-	flex-wrap:no-wrap;
+	flex-wrap:nowrap;
 	align-items:flex-end;
+	width: 100%;
+	justify-content: flex-start;
+}
+#nav:target:checked {
+	visibility: visible;
 }
 .switchbox {
 	margin: 1rem;
@@ -20,7 +25,9 @@ body{
 	align-items:center;
 	text-align: center;
 }
-
+.switchbox .switch {
+	margin: 0;
+}
 .hex-grid{
 	overflow:hidden;
 	width:96%;
@@ -126,7 +133,7 @@ body{
 	}
 	
 }
-@media (min-width:451px) and (max-width: 800px) {
+@media (min-width:501px) and (max-width: 800px) {
 	.hex-grid li {
 		width:calc(100%/3.5 - 3*1.732*1%/3.5) !important; /* = (100%-H-margin) / (#columns + .5) */
 		padding-bottom:calc(100%/3.5/0.866 - 3*2*1%/3.5) !important; /* =  width /0.866 */
@@ -148,7 +155,7 @@ body{
 
 	
 }
-@media (max-width: 450px) {
+@media (max-width: 500px) {
 	.hex-grid li {
 		width:calc(100%/3.5 - 3*1.732*1%/3.5) !important; /* = (100%-H-margin) / (#columns + .5) */
 		padding-bottom:calc(100%/3.5/0.866 - 3*2*1%/3.5) !important; /* =  width /0.866 */
@@ -162,15 +169,32 @@ body{
 	}
 	#nav {
 		flex-direction: column;
-		align-items: flex-start;
+		align-items: flex-end;
 	}
 	.switchbox {
-		margin: none;
+		margin: 0;
 		flex-direction: row;
+		width: max-content;
+		align-items: center;
 	}
 	.switchbox .switch {
-		order: -1;
-		margin-right: 1em;
+		order: 2;
+		margin:0 0 0 1em;
+	}
+	.switchbox p {
+		margin: 0;
 	}
 	
+}
+@media (min-width: 501px) {
+	#menubar {
+		display: none;
+	}
+	#nav {
+		visibility: visible;
+		margin:0;
+		padding: 1rem;
+		border: none;
+		position: relative;
+	}
 }
