--- a/test/style.css
+++ b/test/style.css
@@ -1,6 +1,6 @@
 body{
 	font-family: 'Open Sans', arial, sans-serif;
-
+	background: #888888;
 }
 *{
 	margin:0;
@@ -20,14 +20,23 @@ body{
 }
 .hex-border {
 	border-style: solid;
-    border-width:0px 5px;
+    border-width:0 0.5rem;
     border-color: rgba(0, 0, 0, 0.3);
     width: 100%;
     height: 100%;
     z-index: 2;
-    outline-width: 5px;
-    outline-style: solid;
-    outline-color: black;
+}
+.clothing .hex-border {
+	border-color: rgb(128,0,0);
+}
+.bags .hex-border {
+	border-color: rgb(0,128,0);
+}
+.gear .hex-border {
+	border-color: rgb(0,0,128);
+}
+.home .hex-border {
+	border-color: rgb(128,0,0); 
 }
 .border2 {
 	transform: rotate(60deg);
@@ -42,6 +51,7 @@ body{
 	flex-direction:column;
 	align-items:center;
 	text-align: center;
+	color: #FFF;
 }
 .switchbox .switch {
 	margin: 0;
@@ -60,15 +70,15 @@ body{
 	overflow:hidden;
 	visibility:hidden;
 	transform: rotate(-60deg) skewY(30deg);
-	width:calc(100%/4.5 - 4*1.732*1%/4.5); /* = (100%-H-margin) / (#columns + .5) */
-	padding-bottom:calc(100%/4.5/0.866 - 4*2*1%/4.5); /* =  width /0.866 */
-	margin: 0 0.5% 0 0.5%;
+	width:calc(100%/4.5); /* = (100%-H-margin) / (#columns + .5) */
+	padding-bottom:calc(100%/4.5/0.866); /* =  width /0.866 */
+	margin: 0;
 }
 .hex-grid li:nth-of-type(n+5) {
-	margin: calc(-100%/4.5/3.4641 + 4*1%/4.5/2 + 1%) .5% 0 .5%;
+	margin: calc(-100%/4.5/3.4641 - 1px) 0 0 0;
 }
 .hex-grid li:nth-of-type(8n+5) {
-	margin: calc(-100%/4.5/3.4641 + 4*1%/4.5/2 + 1%) .5% 0 calc(100%/4.5/2 - 4*1.732*1%/4.5/2 + 1%);
+	margin: calc(-100%/4.5/3.4641 - 1px) 0 0 calc(100%/4.5/2);
 }
 .hex-grid li *{
 	position:absolute;
@@ -94,7 +104,7 @@ body{
 }
 .hex-grid li img{
 	right: -100%; left: -100%;
-	height: 100%;
+	height: calc(100% - 0.5rem);
 	width: auto;
 	max-width: none;
 	margin:0 auto;   
@@ -125,43 +135,43 @@ body{
 
 @media (min-width:1201px) {
 	.hex-grid li {
-		width:calc(100%/6.5 - 6*1.732*1%/6.5) !important; /* = (100%-H-margin) / (#columns + .5) */
-		padding-bottom:calc(100%/6.5/0.866 - 6*2*1%/6.5) !important; /* =  width /0.866 */
-		margin: 0 0.5% 0 0.5% !important;
+		width:calc(100%/6.5) !important; /* = (100%-H-margin) / (#columns + .5) */
+		padding-bottom:calc(100%/6.5/0.866) !important; /* =  width /0.866 */
+		margin: 0 !important;
 	}
 	.hex-grid li:nth-of-type(n+7) {
-		margin: calc(-100%/6.5/3.4641 + 6*1%/6.5/2 + 1%) 0.5% 0 0.5% !important;
+		margin: calc(-100%/6.5/3.4641 - 1px) 0 0 0 !important;
 	}
 	.hex-grid li:nth-of-type(12n+7) {
-		margin: calc(-100%/6.5/3.4641 + 6*1%/6.5/2 + 1%) 0.5% 0 calc(100%/6.5/2 - 6*1.732*1%/6.5/2 + 1%) !important;
+		margin: calc(-100%/6.5/3.4641 - 1px) 0 0 calc(100%/6.5/2) !important;
 	}
 	
 }
 @media (min-width:1001px) and (max-width: 1200px) {
 	.hex-grid li {
-		width:calc(100%/5.5 - 5*1.732*1%/5.5) !important; /* = (100%-H-margin) / (#columns + .5) */
-		padding-bottom:calc(100%/5.5/0.866 - 5*2*1%/5.5) !important; /* =  width /0.866 */
-		margin: 0 .5% 0 .5% !important;
+		width:calc(100%/5.5) !important; /* = (100%-H-margin) / (#columns + .5) */
+		padding-bottom:calc(100%/5.5/0.866) !important; /* =  width /0.866 */
+		margin: 0 !important;
 	}
 	.hex-grid li:nth-of-type(n+6) {
-		margin: calc(-100%/5.5/3.4641 + 5*1%/5.5/2 + 1%) .5% 0 .5% !important;
+		margin: calc(-100%/5.5/3.4641 - 1px) 0 0 0 !important;
 	}
 	.hex-grid li:nth-of-type(10n+6) {
-		margin: calc(-100%/5.5/3.4641 + 5*1%/5.5/2 + 1%) .5% 0 calc(100%/5.5/2 - 5*1.732*1%/5.5/2 + 1%) !important;
+		margin: calc(-100%/5.5/3.4641 - 1px) 0 0 calc(100%/5.5/2) !important;
 	}
 	
 }
 @media (min-width:501px) and (max-width: 800px) {
 	.hex-grid li {
-		width:calc(100%/3.5 - 3*1.732*1%/3.5) !important; /* = (100%-H-margin) / (#columns + .5) */
-		padding-bottom:calc(100%/3.5/0.866 - 3*2*1%/3.5) !important; /* =  width /0.866 */
-		margin: 0 .5% 0 .5% !important;
+		width:calc(100%/3.5) !important; /* = (100%-H-margin) / (#columns + .5) */
+		padding-bottom:calc(100%/3.5/0.866) !important; /* =  width /0.866 */
+		margin: 0 !important;
 	}
 	.hex-grid li:nth-of-type(n+4) {
-		margin: calc(-100%/3.5/3.4641 + 3*1%/3.5/2 + 1%) .5% 0 .5% !important;
+		margin: calc(-100%/3.5/3.4641 - 1px) 0 0 0 !important;
 	}
 	.hex-grid li:nth-of-type(6n+4) {
-		margin: calc(-100%/3.5/3.4641 + 3*1%/3.5/2 + 1%) .5% 0 calc(100%/3.5/2 - 3*1.732*1%/3.5/2 + 1%) !important;
+		margin: calc(-100%/3.5/3.4641 - 1px) 0 0 calc(100%/3.5/2) !important;
 	}
 	#nav {
 		justify-content:space-around;
@@ -175,15 +185,15 @@ body{
 }
 @media (max-width: 500px) {
 	.hex-grid li {
-		width:calc(100%/3.5 - 3*1.732*1%/3.5) !important; /* = (100%-H-margin) / (#columns + .5) */
-		padding-bottom:calc(100%/3.5/0.866 - 3*2*1%/3.5) !important; /* =  width /0.866 */
-		margin: 0 .5% 0 .5% !important;
+		width:calc(100%/2.5) !important; /* = (100%-H-margin) / (#columns + .5) */
+		padding-bottom:calc(100%/2.5/0.866) !important; /* =  width /0.866 */
+		margin: 0 !important;
 	}
-	.hex-grid li:nth-of-type(n+4) {
-		margin: calc(-100%/3.5/3.4641 + 3*1%/3.5/2 + 1%) .5% 0 .5% !important;
+	.hex-grid li:nth-of-type(n+3) {
+		margin: calc(-100%/2.5/3.4641 - 1px) 0 0 0 !important;
 	}
-	.hex-grid li:nth-of-type(6n+4) {
-		margin: calc(-100%/3.5/3.4641 + 3*1%/3.5/2 + 1%) .5% 0 calc(100%/3.5/2 - 3*1.732*1%/3.5/2 + 1%) !important;
+	.hex-grid li:nth-of-type(4n+3) {
+		margin: calc(-100%/2.5/3.4641 - 1px) 0 0 calc(100%/2.5/2) !important;
 	}
 	#nav {
 		flex-direction: column;
