--- a/app/style.css
+++ b/app/style.css
@@ -106,8 +106,21 @@ body{
 	display: none !important;
 }
 
-
-@media (min-width:1201px) {
+@media (min-width:1501px) {
+	.hex-grid li {
+		width:calc(100%/7.5 - 7*1.732*1%/7.5) !important; /* = (100%-H-margin) / (#columns + .5) */
+		padding-bottom:calc(100%/7.5/0.866 - 7*2*1%/7.5) !important; /* =  width /0.866 */
+		margin: 0 0.5% 0 0.5% !important;
+	}
+	.hex-grid li:nth-of-type(n+8) {
+		margin: calc(-100%/7.5/3.4641 + 7*1%/7.5/2 + 1%) 0.5% 0 0.5% !important;
+	}
+	.hex-grid li:nth-of-type(14n+8) {
+		margin: calc(-100%/7.5/3.4641 + 7*1%/7.5/2 + 1%) 0.5% 0 calc(100%/7.5/2 - 7*1.732*1%/7.5/2 + 1%) !important;
+	}
+	
+}
+@media (min-width:1201px) and (max-width:1500px) {
 	.hex-grid li {
 		width:calc(100%/6.5 - 6*1.732*1%/6.5) !important; /* = (100%-H-margin) / (#columns + .5) */
 		padding-bottom:calc(100%/6.5/0.866 - 6*2*1%/6.5) !important; /* =  width /0.866 */
