--- a/app/style.css
+++ b/app/style.css
@@ -6,6 +6,45 @@ body{
 	margin:0;
 	padding:0;
 }
+#menubar {
+	z-index: 10;
+	position: fixed;
+	width: 100%;
+	height: auto;
+	top: 0;
+}
+#menubar #menubar-body {
+	width: 100%;
+	height: 3rem;
+	background-color: #888;
+}
+#menubar #nav-button, #menubar #nav-button~label {
+	position: absolute;
+	margin: 0.5rem;
+	right: 0;
+	top: 0;
+	overflow: visible;
+}
+#nav-button {
+	visibility: hidden;
+}
+#menubar #nav-button~label {
+	display: inline-block;
+	height: 2rem;
+	width: 2rem;
+}
+#menubar #nav-button+label:after {
+	position: absolute;
+	top: 2px;
+	right: 0;
+	display: block;
+	width: 2rem;
+	height: 2px;
+	background-color: #FFFFFF;
+	box-shadow: 0 calc(1rem - 3px) #FFFFFF, 0 calc(2rem - 6px) #FFFFFF;
+	content: "";
+	z-index: 11;
+}
 #nav {
 	display: flex;
 	flex-direction:row;
@@ -14,11 +53,9 @@ body{
 	width: 100%;
 	justify-content: flex-start;
 }
-!div > #nav-button {
+#nav-button:checked~#nav {
 	visibility: visible;
-	background-color: red;
 }
-
 .switchbox {
 	margin: 1rem;
 	width: min-content;
@@ -29,6 +66,12 @@ body{
 }
 .switchbox .switch {
 	margin: 0;
+}
+.switch-paddle {
+	transition: background .25s ease-out;
+}
+.switch-paddle:after {
+	transition: left .25s ease-out;
 }
 .hex-grid{
 	overflow:hidden;
@@ -134,7 +177,7 @@ body{
 	}
 	
 }
-@media (min-width:1101px) and (max-width: 1200px) {
+@media (min-width:1001px) and (max-width: 1200px) {
 	.hex-grid li {
 		width:calc(100%/5.5 - 5*1.732*1%/5.5) !important; /* = (100%-H-margin) / (#columns + .5) */
 		padding-bottom:calc(100%/5.5/0.866 - 5*2*1%/5.5) !important; /* =  width /0.866 */
@@ -172,15 +215,15 @@ body{
 }
 @media (max-width: 500px) {
 	.hex-grid li {
-		width:calc(100%/3.5 - 3*1.732*1%/3.5) !important; /* = (100%-H-margin) / (#columns + .5) */
-		padding-bottom:calc(100%/3.5/0.866 - 3*2*1%/3.5) !important; /* =  width /0.866 */
+		width:calc(100%/2.5 - 2*1.732*1%/2.5) !important; /* = (100%-H-margin) / (#columns + .5) */
+		padding-bottom:calc(100%/2.5/0.866 - 2*2*1%/2.5) !important; /* =  width /0.866 */
 		margin: 0 .5% 0 .5% !important;
 	}
-	.hex-grid li:nth-of-type(n+4) {
-		margin: calc(-100%/3.5/3.4641 + 3*1%/3.5/2 + 1%) .5% 0 .5% !important;
+	.hex-grid li:nth-of-type(n+3) {
+		margin: calc(-100%/2.5/3.4641 + 2*1%/2.5/2 + 1%) .5% 0 .5% !important;
 	}
-	.hex-grid li:nth-of-type(6n+4) {
-		margin: calc(-100%/3.5/3.4641 + 3*1%/3.5/2 + 1%) .5% 0 calc(100%/3.5/2 - 3*1.732*1%/3.5/2 + 1%) !important;
+	.hex-grid li:nth-of-type(4n+3) {
+		margin: calc(-100%/2.5/3.4641 + 2*1%/2.5/2 + 1%) .5% 0 calc(100%/2.5/2 - 2*1.732*1%/2.5/2 + 1%) !important;
 	}
 	#nav {
 		flex-direction: column;
@@ -194,16 +237,22 @@ body{
 	}
 	.switchbox .switch {
 		order: 2;
-		margin:0 0 0 1em;
+		margin:0.25rem 0.25rem 0.25rem 1rem;
 	}
 	.switchbox p {
 		margin: 0;
 	}
+	.hex-grid {
+		margin:3rem auto 0 auto;
+	}
 	
 }
 @media (min-width: 501px) {
-	#menubar {
+	#menubar-body {
 		display: none;
+	}
+	#menubar {
+		position: relative;
 	}
 	#nav {
 		visibility: visible;
