--- a/app/style.css
+++ b/app/style.css
@@ -15,7 +15,7 @@ body{
 }
 #menubar #menubar-body {
 	width: 100%;
-	height: 3rem;
+	height: 2.5rem;
 	background-color: #888;
 }
 #menubar #nav-button, #menubar #nav-button~label {
@@ -30,18 +30,18 @@ body{
 }
 #menubar #nav-button~label {
 	display: inline-block;
-	height: 2rem;
-	width: 2rem;
+	height: 1.5rem;
+	width: 1.5rem;
 }
 #menubar #nav-button+label:after {
 	position: absolute;
 	top: 2px;
 	right: 0;
 	display: block;
-	width: 2rem;
+	width: 1.5rem;
 	height: 2px;
 	background-color: #FFFFFF;
-	box-shadow: 0 calc(1rem - 3px) #FFFFFF, 0 calc(2rem - 6px) #FFFFFF;
+	box-shadow: 0 calc(0.75rem - 3px) #FFFFFF, 0 calc(1.5rem - 6px) #FFFFFF;
 	content: "";
 	z-index: 11;
 }
@@ -228,16 +228,19 @@ body{
 	#nav {
 		flex-direction: column;
 		align-items: flex-end;
+		width: 80%;
+		left: 10%;
 	}
 	.switchbox {
 		margin: 0;
 		flex-direction: row;
-		width: max-content;
+		width: 100%;
 		align-items: center;
+		justify-content:space-between;
 	}
 	.switchbox .switch {
 		order: 2;
-		margin:0.25rem 0.25rem 0.25rem 1rem;
+		margin:0.25rem 0 0.25rem 1rem;
 	}
 	.switchbox p {
 		margin: 0;
