--- a/app/style.css
+++ b/app/style.css
@@ -6,6 +6,9 @@ body{
 	margin:0;
 	padding:0;
 }
+#viewable-area {
+	width: 100%;
+}
 #menubar {
 	z-index: 10;
 	position: fixed;
@@ -75,11 +78,15 @@ body{
 }
 .hex-grid{
 	overflow:hidden;
-	width:96%;
 	margin:0 auto;
 	display: block;
+	border: solid 1px black;
+	--hex-number: 4;  /* Set as the number showing + 0.5 */
+	--hex-margin: 0.5rem;  /* Half the width between hexagons */
+	--hex-width: calc((100% - 2 * var(--hex-number) * var(--hex-margin) + var(--hex-margin) ) / ( var(--hex-number) + .5) );
+	width: calc(100% - 2rem);
 }
-.hex-grid li,.hex-grid > div{
+.hex-grid li {
 	display: block;
 	position:relative;
 	list-style-type:none;
@@ -87,15 +94,24 @@ body{
 	overflow:hidden;
 	visibility:hidden;
 	transform: rotate(-60deg) skewY(30deg);
-	width:calc(100%/4.5 - 4*1.732*1%/4.5); /* = (100%-H-margin) / (#columns + .5) */
-	padding-bottom:calc(100%/4.5/0.866 - 4*2*1%/4.5); /* =  width /0.866 */
-	margin: 0 0.5% 0 0.5%;
+	width: var(--hex-width);
+	padding-bottom:calc(var(--hex-width) / 0.866); /* =  width /0.866 */
+	margin-top: 0;
+	margin-right: var(--hex-margin);
+	margin-bottom: 0;
+	margin-left: var(--hex-margin);
 }
 .hex-grid li:nth-of-type(n+5) {
-	margin: calc(-100%/4.5/3.4641 + 4*1%/4.5/2 + 1%) .5% 0 .5%;
+	margin-top: calc( ( -1 * var(--hex-width) / 3.4641 ) + ( 1.793 * var(--hex-margin) ) );
+}
+.hex-grid li:nth-of-type(8n+1) {
+	margin-left: 0;
 }
 .hex-grid li:nth-of-type(8n+5) {
-	margin: calc(-100%/4.5/3.4641 + 4*1%/4.5/2 + 1%) .5% 0 calc(100%/4.5/2 - 4*1.732*1%/4.5/2 + 1%);
+	margin-left:calc(var(--hex-margin) + (var(--hex-width) / 2));
+}
+.hex-grid li:nth-of-type(8n) {
+	margin-right: 0;
 }
 .hex-grid li *{
 	position:absolute;
@@ -148,63 +164,109 @@ body{
 .hidden {
 	display: none !important;
 }
+@media (min-width: 1600px) {
+	#viewable-area {
+		width: 1600px;
+		margin: 0 auto;
+	}
+}
 
-@media (min-width:1501px) {
-	.hex-grid li {
-		width:calc(100%/7.5 - 7*1.732*1%/7.5) !important; /* = (100%-H-margin) / (#columns + .5) */
-		padding-bottom:calc(100%/7.5/0.866 - 7*2*1%/7.5) !important; /* =  width /0.866 */
-		margin: 0 0.5% 0 0.5% !important;
+@media (min-width:1500px) {
+	.hex-grid {
+		--hex-number: 7;
+	}
+	.hex-grid li[class] {
+		margin-top: 0;
+		margin-right: var(--hex-margin);
+		margin-bottom: 0;
+		margin-left: var(--hex-margin);
 	}
 	.hex-grid li:nth-of-type(n+8) {
-		margin: calc(-100%/7.5/3.4641 + 7*1%/7.5/2 + 1%) 0.5% 0 0.5% !important;
+		margin-top: calc( ( -1 * var(--hex-width) / 3.4641 ) + ( 1.793 * var(--hex-margin) ) );
+	}
+	.hex-grid li:nth-of-type(14n+1) {
+		margin-left: 0;
 	}
 	.hex-grid li:nth-of-type(14n+8) {
-		margin: calc(-100%/7.5/3.4641 + 7*1%/7.5/2 + 1%) 0.5% 0 calc(100%/7.5/2 - 7*1.732*1%/7.5/2 + 1%) !important;
+		margin-left:calc(var(--hex-margin) + (var(--hex-width) / 2));
+	}
+	.hex-grid li:nth-of-type(14n) {
+		margin-right: 0;
 	}
 	
 }
-@media (min-width:1201px) and (max-width:1500px) {
-	.hex-grid li {
-		width:calc(100%/6.5 - 6*1.732*1%/6.5) !important; /* = (100%-H-margin) / (#columns + .5) */
-		padding-bottom:calc(100%/6.5/0.866 - 6*2*1%/6.5) !important; /* =  width /0.866 */
-		margin: 0 0.5% 0 0.5% !important;
+@media (min-width:1200px) and (max-width:1500px) {
+	.hex-grid {
+		--hex-number: 6;
+	}
+	.hex-grid li[class] {
+		margin-top: 0;
+		margin-right: var(--hex-margin);
+		margin-bottom: 0;
+		margin-left: var(--hex-margin);
 	}
 	.hex-grid li:nth-of-type(n+7) {
-		margin: calc(-100%/6.5/3.4641 + 6*1%/6.5/2 + 1%) 0.5% 0 0.5% !important;
+		margin-top: calc( ( -1 * var(--hex-width) / 3.4641 ) + ( 1.793 * var(--hex-margin) ) );
+	}
+	.hex-grid li:nth-of-type(12n+1) {
+		margin-left: 0;
 	}
 	.hex-grid li:nth-of-type(12n+7) {
-		margin: calc(-100%/6.5/3.4641 + 6*1%/6.5/2 + 1%) 0.5% 0 calc(100%/6.5/2 - 6*1.732*1%/6.5/2 + 1%) !important;
+		margin-left:calc(var(--hex-margin) + (var(--hex-width) / 2));
+	}
+	.hex-grid li:nth-of-type(12n) {
+		margin-right: 0;
 	}
 	
 }
-@media (min-width:1001px) and (max-width: 1200px) {
-	.hex-grid li {
-		width:calc(100%/5.5 - 5*1.732*1%/5.5) !important; /* = (100%-H-margin) / (#columns + .5) */
-		padding-bottom:calc(100%/5.5/0.866 - 5*2*1%/5.5) !important; /* =  width /0.866 */
-		margin: 0 .5% 0 .5% !important;
+@media (min-width:961px) and (max-width: 1200px) {
+	.hex-grid {
+		--hex-number: 5;
+	}
+	.hex-grid li[class] {
+		margin-top: 0;
+		margin-right: var(--hex-margin);
+		margin-bottom: 0;
+		margin-left: var(--hex-margin);
 	}
 	.hex-grid li:nth-of-type(n+6) {
-		margin: calc(-100%/5.5/3.4641 + 5*1%/5.5/2 + 1%) .5% 0 .5% !important;
+		margin-top: calc( ( -1 * var(--hex-width) / 3.4641 ) + ( 1.793 * var(--hex-margin) ) );
+	}
+	.hex-grid li:nth-of-type(10n+1) {
+		margin-left: 0;
 	}
 	.hex-grid li:nth-of-type(10n+6) {
-		margin: calc(-100%/5.5/3.4641 + 5*1%/5.5/2 + 1%) .5% 0 calc(100%/5.5/2 - 5*1.732*1%/5.5/2 + 1%) !important;
+		margin-left:calc(var(--hex-margin) + (var(--hex-width) / 2));
+	}
+	.hex-grid li:nth-of-type(10n) {
+		margin-right: 0;
 	}
 	
 }
-@media (min-width:501px) and (max-width: 800px) {
-	.hex-grid li {
-		width:calc(100%/3.5 - 3*1.732*1%/3.5) !important; /* = (100%-H-margin) / (#columns + .5) */
-		padding-bottom:calc(100%/3.5/0.866 - 3*2*1%/3.5) !important; /* =  width /0.866 */
-		margin: 0 .5% 0 .5% !important;
+@media (min-width:501px) and (max-width: 740px) {
+	.hex-grid {
+		--hex-number: 3;
+	}
+	.hex-grid li[class] {
+		margin-top: 0;
+		margin-right: var(--hex-margin);
+		margin-bottom: 0;
+		margin-left: var(--hex-margin);
 	}
 	.hex-grid li:nth-of-type(n+4) {
-		margin: calc(-100%/3.5/3.4641 + 3*1%/3.5/2 + 1%) .5% 0 .5% !important;
+		margin-top: calc( ( -1 * var(--hex-width) / 3.4641 ) + ( 1.793 * var(--hex-margin) ) );
+	}
+	.hex-grid li:nth-of-type(6n+1) {
+		margin-left: 0;
 	}
 	.hex-grid li:nth-of-type(6n+4) {
-		margin: calc(-100%/3.5/3.4641 + 3*1%/3.5/2 + 1%) .5% 0 calc(100%/3.5/2 - 3*1.732*1%/3.5/2 + 1%) !important;
+		margin-left:calc(var(--hex-margin) + (var(--hex-width) / 2));
+	}
+	.hex-grid li:nth-of-type(6n) {
+		margin-right: 0;
 	}
 	#nav {
-		justify-content:space-around;
+		justify-content:space-between;
 
 	}
 	.switchbox {
@@ -214,16 +276,26 @@ body{
 	
 }
 @media (max-width: 500px) {
-	.hex-grid li {
-		width:calc(100%/2.5 - 2*1.732*1%/2.5) !important; /* = (100%-H-margin) / (#columns + .5) */
-		padding-bottom:calc(100%/2.5/0.866 - 2*2*1%/2.5) !important; /* =  width /0.866 */
-		margin: 0 .5% 0 .5% !important;
+	.hex-grid {
+		--hex-number: 2;
+	}
+	.hex-grid li[class] {
+		margin-top: 0;
+		margin-right: var(--hex-margin);
+		margin-bottom: 0;
+		margin-left: var(--hex-margin);
 	}
 	.hex-grid li:nth-of-type(n+3) {
-		margin: calc(-100%/2.5/3.4641 + 2*1%/2.5/2 + 1%) .5% 0 .5% !important;
+		margin-top: calc( ( -1 * var(--hex-width) / 3.4641 ) + ( 1.793 * var(--hex-margin) ) );
+	}
+	.hex-grid li:nth-of-type(4n+1) {
+		margin-left: 0;
 	}
 	.hex-grid li:nth-of-type(4n+3) {
-		margin: calc(-100%/2.5/3.4641 + 2*1%/2.5/2 + 1%) .5% 0 calc(100%/2.5/2 - 2*1.732*1%/2.5/2 + 1%) !important;
+		margin-left:calc(var(--hex-margin) + (var(--hex-width) / 2));
+	}
+	.hex-grid li:nth-of-type(4n) {
+		margin-right: 0;
 	}
 	#nav {
 		flex-direction: column;
@@ -260,7 +332,7 @@ body{
 	#nav {
 		visibility: visible;
 		margin:0;
-		padding: 1rem;
+		padding: 0;
 		border: none;
 		position: relative;
 	}
